# ihatehighways

./: .gitignore  LICENSE.md  README.md  render.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: classify.py  config.py  gmaps.py  google_routes.py  junctions.py  knapsack.py  main.py  models.py  osm.py  planner.py  polyline_util.py  ratelimit.py  ridetoken.py
backend/tests/: test_api.py  test_classify.py  test_gmaps.py  test_junctions.py  test_knapsack.py  test_osm.py  test_planner.py  test_polyline_util.py  test_ridetoken.py  test_scout.py
docs/: algorithm.md  api.md  handover.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  theme.css
frontend/src/components/: BudgetSlider.tsx  CutList.tsx  DetourList.tsx  MapView.tsx  PlaceField.tsx  ProgressLayer.tsx  RoadRibbon.tsx  RouteLayer.tsx  ScoutLoader.tsx  SetupCard.tsx  TradePanel.tsx
frontend/src/lib/: compose.ts  format.ts  progress.ts
ios/: Info.plist  README.md  Secrets.example.xcconfig  project.yml
ios/Sources/: APIClient.swift  App.swift  Compose.swift  Models.swift  PlanView.swift  Polyline.swift  RideView.swift  Theme.swift
worker/: package-lock.json  package.json  wrangler.jsonc
worker/.wrangler/cache/: wrangler-account.json
worker/src/: index.ts
